--- a/Front/index.html
+++ b/Front/index.html
@@ -54,6 +54,16 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="card">
+                    <h5 class="card-header">Serviços<button type="button" class="btn btn-success float-right"
+                            data-toggle="modal" data-target="#modalServico">Iniciar atendimento</button></h5>
+                    <div class="card-body">
+
+                        <div ui-grid="gridOptions2" ui-grid-pagination ui-grid-exporter class="grid"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="card">
                     <h5 class="card-header">Clientes <button type="button" class="btn btn-primary float-right"
                             data-toggle="modal" data-target="#modalCliente">Novo</button></h5>
                     <div class="card-body">
@@ -63,16 +73,6 @@
                 </div>
             </div>
 
-            <div class="col-md-6">
-                <div class="card">
-                    <h5 class="card-header">Serviços<button type="button" class="btn btn-success float-right"
-                            data-toggle="modal" data-target="#modalServico">Iniciar atendimento</button></h5>
-                    <div class="card-body">
-
-                        <div ui-grid="gridOptions2" ui-grid-pagination ui-grid-exporter class="grid"></div>
-                    </div>
-                </div>
-            </div>
         </div>
 
 
@@ -110,8 +110,8 @@
 
                                 <div class="form-group">
                                     <label class="col-form-label">Cliente:</label>
-                                    <select class="form-control" ng-model="servico.cliente">
-                                        <option ng-repeat="cliente in clientes" ng-value="estado.id">{{cliente.nome}}
+                                    <select class="form-control" ng-model="servico.id_cliente">
+                                        <option ng-repeat="cliente in clientes" ng-value="cliente.id">{{cliente.nome}}
                                         </option>
                                     </select>
                                 </div>
@@ -122,7 +122,7 @@
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
                             <button type="button" class="btn btn-primary" type="submit"
-                                ng-click="SalvarCliente(cliente)">Salvar</button>
+                                ng-click="SalvarServico(servico)">Salvar</button>
                         </div>
                     </form>
                 </div>
