--- a/Front/index.html
+++ b/Front/index.html
@@ -34,6 +34,10 @@
 
     <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.css">
 
+    <script src="node_modules/jspdf/dist/jspdf.min.js"></script>
+    <script src="node_modules/jspdf-autotable/dist/jspdf.plugin.autotable.min.js"></script>
+   </script>
+
 
 
 <body>
@@ -55,21 +59,21 @@
     <div class="container-fluid" ng-controller="IndexController">
 
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-12">
                 <div class="card">
-
-                    <h5 class="card-header">Serviços <button type="button" class="btn btn-success float-right"
-                            data-toggle="modal" data-target="#modalServico">Iniciar atendimento</button></h5>
+           
+           <h5 class="card-header">Serviços <button type="button" class="btn btn-success float-right"
+                        style="margin-left: 5px;"    data-toggle="modal" data-target="#modalServico">Iniciar atendimento</button><button  class="btn btn-danger float-right" ng-click="GerarRelatorioServicos()">Exportar PDF</button></h5>
                     <div class="card-body">
 
                         <div ui-grid="gridOptions2" ui-grid-pagination ui-grid-exporter class="grid"></div>
                     </div>
                 </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-12">
                 <div class="card">
-                    <h5 class="card-header">Clientes <button type="button" ng-click="cliente=[]" class="btn btn-primary float-right"
-                            data-toggle="modal" data-target="#modalCliente">Novo</button></h5>
+                    <h5 class="card-header">Clientes <button type="button" ng-click="clienteSave={}" style="margin-left: 5px;" class="btn btn-primary float-right"
+                            data-toggle="modal" data-target="#modalCliente">Novo</button> <button  class="btn btn-danger float-right" ng-click="GerarRelatorioClientes()">Exportar PDF</button></h5>
                     <div class="card-body">
 
                         <div ui-grid="gridOptions1" ui-grid-pagination ui-grid-exporter class="grid"></div>
